@@ -369,6 +369,9 @@ Core and builtins
 Library
 -------
 
+- #1664522: in urllib, don't read non-existing directories in ftp mode,
+  returning a 0-byte file -- raise an IOError instead.
+
 - #856047: respect the ``no_proxy`` environment variable when using the
   ``http_proxy`` etc. environment variables in urllib.
 
